# immunespace-to-cellfie-mapper

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/data/: genename-data.csv  genename-to-hgnc-id.csv  model-filter.csv
