[package]
name = "immunespace-to-cellfie-mapper"
version = "0.1.0"
authors = ["Jason Reilly <jdr0887@gmail.com>"]
edition = "2018"

[dependencies]
csv = "^1.1"
dotenv = "0.15"
env_logger = "^0.9"
humantime = "^2.0"
itertools = "^0.10"
log = "^0.4"
rayon = "^1.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
structopt = "^0.3"
ureq = { version = "^2.3", features = ["json", "charset"] }
